[gd_scene load_steps=7 format=3 uid="uid://c16u27d0op4n4"]

[ext_resource type="Texture2D" uid="uid://dtkmy6xmxrjqi" path="res://assets/9-box-tile.png" id="1_foir6"]
[ext_resource type="Script" uid="uid://dlxa1x4uygq4f" path="res://scenes/alternate_main_color_panel.gd" id="2_54tif"]
[ext_resource type="Script" uid="uid://beojqb0c3v1dr" path="res://scenes/ui/color_options.gd" id="2_cf5ri"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sbbpf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5mh8f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2yhv4"]

[node name="AlternateMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -304.0
offset_right = 236.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_foir6")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="ColorOptions" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = 50.0
offset_right = 101.0
offset_bottom = 231.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_cf5ri")

[node name="Color1" type="CheckButton" parent="Menu/ColorOptions"]
self_modulate = Color(0.879081, 0.839086, 0.144712, 1)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_sbbpf")
text = "Color 1"

[node name="Color2" type="CheckButton" parent="Menu/ColorOptions"]
self_modulate = Color(0.879081, 0.839086, 0.144712, 1)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_5mh8f")
text = "Color 1"

[node name="Color3" type="CheckButton" parent="Menu/ColorOptions"]
self_modulate = Color(0.879081, 0.839086, 0.144712, 1)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_2yhv4")
text = "Color 1"

[node name="ColorMenu" type="GridContainer" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.164
anchor_top = 0.075
anchor_right = 0.839
anchor_bottom = 0.53
offset_left = -2.18402
offset_top = 1.5
offset_right = 1.48798
offset_bottom = 1.5
columns = 3
script = ExtResource("2_54tif")

[node name="Panel1" type="Panel" parent="Menu/ColorMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Menu/ColorMenu/Panel1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="ColorRect" type="ColorRect" parent="Menu/ColorMenu/Panel1/MarginContainer"]
layout_mode = 2
color = Color(0.872462, 0.457497, 0.8356, 1)

[node name="Panel2" type="Panel" parent="Menu/ColorMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Menu/ColorMenu/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="ColorRect" type="ColorRect" parent="Menu/ColorMenu/Panel2/MarginContainer"]
layout_mode = 2
color = Color(0.669996, 0.414336, 0.594976, 1)

[node name="Panel3" type="Panel" parent="Menu/ColorMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Menu/ColorMenu/Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="ColorRect" type="ColorRect" parent="Menu/ColorMenu/Panel3/MarginContainer"]
layout_mode = 2
color = Color(0.150295, 0.771315, 0.354925, 1)

[node name="Panel4" type="Panel" parent="Menu/ColorMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Menu/ColorMenu/Panel4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="ColorRect" type="ColorRect" parent="Menu/ColorMenu/Panel4/MarginContainer"]
layout_mode = 2
color = Color(0.232034, 0.0627797, 0.0852542, 1)

[node name="Panel5" type="Panel" parent="Menu/ColorMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Menu/ColorMenu/Panel5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="ColorRect" type="ColorRect" parent="Menu/ColorMenu/Panel5/MarginContainer"]
layout_mode = 2
color = Color(0.714248, 0.00531339, 0.753779, 1)

[node name="Panel6" type="Panel" parent="Menu/ColorMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Menu/ColorMenu/Panel6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="ColorRect" type="ColorRect" parent="Menu/ColorMenu/Panel6/MarginContainer"]
layout_mode = 2
color = Color(0.389654, 0.253212, 0.190988, 1)

[node name="Panel7" type="Panel" parent="Menu/ColorMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Menu/ColorMenu/Panel7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="ColorRect" type="ColorRect" parent="Menu/ColorMenu/Panel7/MarginContainer"]
layout_mode = 2
color = Color(0.176354, 0.496067, 0.991251, 1)

[node name="Panel8" type="Panel" parent="Menu/ColorMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Menu/ColorMenu/Panel8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="ColorRect" type="ColorRect" parent="Menu/ColorMenu/Panel8/MarginContainer"]
layout_mode = 2
color = Color(0.978376, 0.129692, 0.754165, 1)

[node name="Panel9" type="Panel" parent="Menu/ColorMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Menu/ColorMenu/Panel9"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="ColorRect" type="ColorRect" parent="Menu/ColorMenu/Panel9/MarginContainer"]
layout_mode = 2
color = Color(0.427862, 0.833518, 0.436453, 1)
